<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_200"
        android:orientation="vertical"
        android:backgroundTint="@color/amarillo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnMostrarToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul_marino"
            android:text="@string/mostrarToast" />

        <TextView
            android:id="@+id/txtContador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="100sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/cero" />

        <Button
            android:id="@+id/btnContar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul_marino"
            android:text="@string/contar" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnCE"
                style="@style/BotonCalculadora"
                android:text="@string/btnCE" />

            <Button
                android:id="@+id/btnC"
                style="@style/BotonCalculadora"
                android:text="@string/btnC" />

            <Button
                android:id="@+id/btnBorrar"
                style="@style/BotonCalculadora"
                android:layout_span="2"
                android:text="@string/btnBorrar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn7"
                style="@style/BotonCalculadora"
                android:text="@string/btn7" />

            <Button
                android:id="@+id/btn8"
                style="@style/BotonCalculadora"
                android:text="@string/btn8" />

            <Button
                android:id="@+id/btn9"
                style="@style/BotonCalculadora"
                android:text="@string/btn9" />

            <Button
                android:id="@+id/btnMas"
                style="@style/BotonCalculadora"
                android:text="@string/btnSuma" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn6"
                style="@style/BotonCalculadora"
                android:text="@string/btn6" />

            <Button
                android:id="@+id/btn5"
                style="@style/BotonCalculadora"
                android:text="@string/btn5" />

            <Button
                android:id="@+id/btn4"
                style="@style/BotonCalculadora"
                android:text="@string/btn4" />

            <Button
                android:id="@+id/btnMenos"
                style="@style/BotonCalculadora"
                android:text="@string/btnResta" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn3"
                style="@style/BotonCalculadora"
                android:text="@string/btn3" />

            <Button
                android:id="@+id/btn2"
                style="@style/BotonCalculadora"
                android:text="@string/btn2" />

            <Button
                android:id="@+id/btn1"
                style="@style/BotonCalculadora"
                android:text="@string/btn1" />

            <Button
                android:id="@+id/btnMultiplica"
                style="@style/BotonCalculadora"
                android:text="@string/btnMultiplica" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn0"
                style="@style/BotonCalculadora"
                android:text="@string/cero" />

            <Button
                android:id="@+id/btnPunto"
                style="@style/BotonCalculadora"
                android:text="@string/btnPunto" />

            <Button
                android:id="@+id/btnIgual"
                style="@style/BotonCalculadora"
                android:text="@string/btnIgual" />

            <Button
                android:id="@+id/btnDivide"
                style="@style/BotonCalculadora"
                android:text="@string/btnDivide" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>